Make blocks start at a random X coordinate.  This required adding height and width information to each block (which also helps in figuring out which sections to redraw) and breaking random number generation into its own function.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 gameplay
 ========
-- Blocks currently always drop from the middle, but should pick a random
-  starting X coordinate.
 - Full lines currently always disappear.  Instead, we should apply a
   probability distribtion to the full lines so that they disappear
   eventually but not necessarily as soon as they are filled.
@@ -13,6 +11,7 @@ gameplay
 - Blocks should fall at random speeds.
 - Ability to very briefly move the block sideways once it's landed?
 - Rotate blocks.
+- Rotate rows by a random amount when a line is removed.
 
 
 graphics
