More stuff to do based on testing.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 gameplay
 ========
+- be able to hold down sideways movement keys
+- better game over detection and handling
+- be able to move the block briefly once it's landed
 
 
 graphics
