--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 gameplay
 ========
-- be able to hold down sideways movement keys
 - better game over detection and handling
-- try to clear out full lines before end of game
 
 
 graphics
@@ -11,8 +9,6 @@ graphics
 - Make a better layout for the main playing screen complete with borders
   and things like that.
 - The blocks are really ugly.  They need to be pictures of random shapes.
-  We're not going to be constrained to tetris block shapes, either.  The
-  current blocks are just temporary to test everything else out.
 - Some sort of welcome/credits/whatever intro screen.
 - Better line disappearing effect.
 
@@ -25,5 +21,11 @@ sound
 
 misc
 ====
-- port to Windows
-- port to MacOS X
+- incorporate ports into Makefile somehow
+
+
+ideas
+=====
+- randomized blocks
+- push field up when a line near the bottom is > 50% empty
+- drop new blocks when we want to, not when one lands
