--- a/TODO
+++ b/TODO
@@ -11,8 +11,8 @@ graphics
 
 sound
 =====
-- Sound effects for landing, rotating, deleting, etc.
-- Really tedious music.
+- Sound effects for landing, rotating, deleting, etc
+- Really tedious music
 
 
 misc
@@ -22,7 +22,5 @@ misc
 
 ideas
 =====
-- randomized blocks
-- push field up when a line near the bottom is > 50% empty
-- drop new blocks when we want to, not when one lands
-- transpose columns
+- Push field up when something happens (not sure what)
+- Transpose columns
